# claude-telegram-mirror

./: .gitignore  .npmignore  ADR012_IMPLEMENTATION_REFERENCE.md  ADR012_QUICK_FINDINGS.md  ADR012_RESEARCH_INDEX.md  CHANGELOG.md  Cargo.toml  README.md  RESEARCH_ADR012_VALIDATION.md  SECURITY.md  agentdb.rvf  package-lock.json  package.json  postinstall.cjs  postinstall.js  tsconfig.json  vitest.config.ts
.claude-flow/metrics/: performance.json  task-metrics.json
.claude/commands/: tg.md
.github/workflows/: ci.yml  publish.yml  release.yml
_bmad-output/planning-artifacts/: epics-adr002.md  epics-adr006-rev2.md  epics-adr006.md  epics-adr008.md  epics.md
docs/: ARCHITECTURE.md  DEVELOPMENT.md  INJECTOR_ANALYSIS.md  PRD.md  SECURITY.md  SESSION_MAPPING_ARCHITECTURE.md  SETUP.md  bash-vs-node-handler-analysis.md  macOS-compatibility-analysis.md  macos-compatibility-report.md  multi-instance-research.md  race-condition-analysis.md
docs/adr/: ADR-001-rust-rewrite.md  ADR-001-typescript-security-and-ux.md  ADR-002-phased-rust-migration.md  ADR-002-teloxide.md  ADR-003-bash-hook-retention.md  ADR-003-dual-hook-handlers.md  ADR-004-flock-pid-locking.md  ADR-004-tmux-only-injection.md  ADR-005-governor-rate-limiting.md  ADR-005-sqlite-session-storage.md  ADR-006-rust-migration-gap-audit.md  ADR-006-single-binary-clap.md  ADR-007-runtime-toggle-and-outbound-files.md  ADR-008-v020-release-readiness-audit.md  ADR-009-release-polish-broken-windows.md  ADR-010-deep-release-readiness-evaluation.md  ADR-011-resilience-architecture.md  ADR-012-askuserquestion-tentative-selection.md  ADR-013-session-hierarchy-and-tmux-reliability.md  ADR-014-lifecycle-hooks-approval-ux-and-input-reliability.md  ADR-015-restore-askuserquestion-bidirectional-mirror.md
docs/talk/: build.sh  outline.md  the-most-fragile-line.md
npm-packages/ctm-darwin-arm64/: package.json
npm-packages/ctm-darwin-x64/: package.json
rust-crates/: Cargo.toml
rust-crates/ctm/: Cargo.toml
rust-crates/ctm/src/: bot.rs  colors.rs  config.rs  daemon.rs  doctor.rs  error.rs  formatting.rs  hook.rs  injector.rs  installer.rs  lib.rs  liveness.rs  main.rs  prune.rs  service.rs  session.rs  setup.rs  socket.rs  summarize.rs  types.rs
rust-crates/ctm/src/bot/: client.rs  mod.rs  queue.rs  types.rs
rust-crates/ctm/src/daemon/: callback_handlers.rs  cleanup.rs  event_loop.rs  files.rs  mod.rs  reconcile.rs  socket_handlers.rs  telegram_handlers.rs
rust-crates/ctm/src/service/: env.rs  launchd.rs  mod.rs  systemd.rs
rust-crates/ctm/tests/: bot_tests.rs  cli_smoke.rs  concurrency.rs  config_validation.rs  daemon_handlers.rs  formatting_tests.rs  hook_pipeline.rs  routing_spike.rs  session_lifecycle.rs  socket_roundtrip.rs  summarize_tests.rs
scripts/: bump-version.sh  claude-wrapper.sh  ctm-wrapper.cjs  doctor.sh  get-chat-id.sh  global-hooks.sh  install.sh  list_topics.py  resolve-binary.cjs  resolve-binary.js  start-daemon.sh  telegram-hook.sh  uninstall.sh
src/: bot.rs  bridge.rs  cli.ts  config.rs  error.rs  formatting.rs  hook.rs  index.ts  injector.rs  main.rs  session.rs  socket.rs  summarizer.rs  types.rs
(+31 files in other folders)
