[package]
name = "ctm"
version = "0.2.9"
edition = "2021"
description = "Claude Telegram Mirror — Bidirectional Claude Code <-> Telegram bridge"
license = "MIT"
authors = ["Robert E. Lee <robert@agidreams.us>"]

[lib]
name = "ctm"
path = "src/lib.rs"

[[bin]]
name = "ctm"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
nix = { version = "0.29", features = ["fs", "signal", "process"] }
rusqlite = { version = "0.32", features = ["bundled"] }
governor = "0.7"
thiserror = "2"
anyhow = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
time = { version = "0.3", features = ["macros"] }
dialoguer = "0.11"

[dev-dependencies]
tempfile = "3"
